--- a/source/widget/Mall.FindTeacher/find-teacher.css
+++ b/source/widget/Mall.FindTeacher/find-teacher.css
@@ -134,7 +134,7 @@
 .find-teacher-data-statistics img {
   margin-right: 10px;
 }
-.find-teacher-photo-a {
+.find-teacher-hover-a {
   position: absolute;
   width: 200px;
   height: 200px;
