--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -125,7 +125,7 @@
 	   .attend-class-time {
 	   	overflow: hidden;
 	   	  span {
-			 width: 75px;line-height: 25px; padding-left: 10px;
+			 width: 75px;line-height: 25px; padding-left: 10px;color: #666;
 	   	  }
 	   	  ul {
 	   	  	width: 510px; overflow: hidden;
@@ -146,7 +146,7 @@
 	   .course-content-text {
 	   	 height: 86px;background: #f9f9f9;padding-top: 5px;margin-bottom: 20px;
 	   	 span {
-			 width: 75px;line-height: 25px; padding-left: 10px;
+			 width: 75px;line-height: 25px; padding-left: 10px;color: #666;
 	   	  }
 	   	  ul.f-left {
 	   			width: 510px; overflow: hidden;
@@ -159,7 +159,7 @@
 	   		}
 	   }
 	   .course-favorable-list {
-	   		height: 36px;padding-left: 10px;
+	   		height: 36px;padding-left: 10px;color: #666;
 	   		span {
 	   			display: inline-block; background: #e74c3c;color: #fff;margin-right: 10px;padding:0 5px;
 	   		}
@@ -169,18 +169,18 @@
 	   		.favrble-money {
 	   			width: 300px;padding-left: 10px;
 	   			span {
-	   				display:inline-block;padding-right: 20px;
+	   				display:inline-block;padding-right: 20px;color: #666;
 	   				em {font-size: 26px;font-style: normal;}
 	   			}
 	   			del {
-	   				display:inline-block;
+	   				display:inline-block;color: #666;
 	   				em {font-size: 16px;font-style: normal;}
 	   			}
 	   		}
 	   		ul.f-right {
 	   			overflow: hidden;
 	   			li {
-	   				float: right;width: 100px; text-align: center;list-style: none;
+	   				float: right;width: 100px; text-align: center;list-style: none;color: #666;
 	   				em {font-style: normal;}
 	   				&.line {border-left: 1px solid #dcdcdc;}
 	   			}
@@ -226,7 +226,7 @@
 			.course-content-teacher {
 				height: 80px; overflow: hidden;
 				span.f-left {
-					 width: 75px;font-size: 12px;line-height: 25px; padding-left: 10px;padding-top:20px;
+					 width: 75px;font-size: 12px;line-height: 25px; padding-left: 10px;padding-top:20px;color: #666;
 				}
                 span.open-listen-num {
                     width: 70px;font-size: 18px;padding-left: 20px;padding-top:0;
@@ -236,7 +236,7 @@
 			.open-course-list {
 				height: 260px;background: #fcfcfc;margin-bottom: 20px;overflow: hidden;padding-left: 10px;
 				.open-course-title {
-					height: 40px;line-height: 40px;font-size: 12px;padding-top: 10px;
+					height: 40px;line-height: 40px;font-size: 12px;padding-top: 10px;color: #666;
 				}
 				#open-outline {
 					height: 200px;overflow: auto;
@@ -545,6 +545,105 @@
         overflow: hidden;padding:5px 10px 10px 10px;
     }
 }
+.rightResearch {
+	width: 67px;
+	height: 256px;
+	position: fixed;
+	z-index: 119;
+	right:0;
+	bottom: 0px;
+	_top : 300px;
+	outline: none;
+	ul{background:transparent;}
+	li {
+		overflow: hidden;
+		a {
+			display: block;
+			width:67px;
+			height:64px;
+			background-image: url("img/feedback.gif");
+			background-repeat: no-repeat;
+
+		}
+		#r_copyright{
+			background-position:0 0;
+			&.current,  &:hover {
+				background-position:0 -192px;	
+			}
+		}
+		#r_feedBack {
+				background-position:0 -64px;
+			&:hover {
+				background-position:0 -256px;	
+			}
+		}
+		#r_toTop {
+				height:63px;background-position:0 -129px;
+			&:hover {
+				background-position:0 -321px;	
+			}
+		}
+	}
+}
+#copy_notice {
+	text-align: center;
+	padding: 5px 10px;
+	background: #fff;
+	border: 1px solid #3399cc;
+	position: fixed;
+	bottom: 129px;
+	right: 67px;
+	display: none;
+	width: 155px;
+	height: 127px;
+	overflow: hidden;
+	p {
+		line-height: 24px;
+		color: #3399cc;
+		font:14px "Microsoft YaHei",SimHei,arial;
+		overflow: hidden;
+	}
+	p.copy_notice_num{
+		font-size:24px;
+	}
+	p.group_join{
+		margin-top: 3px;
+	}
+	p.group_join a{
+		background: none;
+		width: auto;
+		height: auto;
+		display: inline-block;
+		margin-right: 3px;
+	}
+	p.group_join a img{
+		vertical-align: middle;
+	}
+}
+.layer_feedback {
+	width:530px;
+	height:165px;
+	overflow: hidden;
+	.feedback_icon {
+		height:90px;
+		line-height: 40px;
+		overflow: hidden;
+		margin:35px 0 0 70px;
+		font-family:"Microsoft YaHei",SimHei,arial;
+		 font-size: 16px;
+		 padding-left:40px; 
+		 color:#333;
+		 background: url("img/check-64.png") 0 3px no-repeat;
+	}
+	.feedback_time {
+		height:30px;
+		line-height: 30px;
+		 text-align: right;
+		  color: #999;
+		  padding-right: 30px;
+	}
+}
+
 /*
  * CSS Styles that are needed by jScrollPane for it to operate correctly.
  *模拟听课页---讲节列表过多时的滚动条
@@ -575,3 +674,6 @@
 .jspDrag{width:8px;border-radius:4px;position: relative;top: 0;left: 0;cursor: pointer;background:#cccccc repeat-y;margin:0 auto;}
 /* Yuk! CSS Hack for IE6 3 pixel bug :( */
 * html .jspCorner{margin: 0 -3px 0 0;}
+.a {
+    overflow: hidden;
+}
