Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/Public.Dynamic/fresh.less
+++ b/source/widget/Public.Dynamic/fresh.less
@@ -327,6 +327,11 @@
                &:hover{
                    background: @blue-color;
                }
+               &.fresh-Answer-disabled{
+                  &:hover{
+                       background: #ccd1d9;
+                  }
+               }
             }
          }
        }
