--- a/source/widget/UserHome.sidebar/sidebar.less
+++ b/source/widget/UserHome.sidebar/sidebar.less
@@ -50,6 +50,11 @@
         display: block;
     }
 }
+.btn-primary.current{
+    background-color: #2494be;
+    border-color: rgba(0, 0, 0, 0);
+    color: #fff;
+}
 
 
 
