提交修改样式

--- a/source/widget/Public.MiniCart/minicart.less
+++ b/source/widget/Public.MiniCart/minicart.less
@@ -58,7 +58,9 @@
         padding-top: 10px;
         right: 0;
         top: 33px;
+        top:32px\0;
         border-top: 0;
+        border-top:1px solid #dfdfdf\0;
         .spacer {
             width: 139px;
             height: 12px;
