--- a/source/widget/Mall.indexTrends/ui-trends.less
+++ b/source/widget/Mall.indexTrends/ui-trends.less
@@ -90,7 +90,7 @@
 				}
 			}
 			.media-heading {
-                width:130px;
+                //width:130px;
                 height: 20px;
                 overflow: hidden;
 				font-size: 18px;
