--- a/source/widget/Public.Header/header.css
+++ b/source/widget/Public.Header/header.css
@@ -11,6 +11,7 @@
   height: 100px;
   margin: 0 auto;
   position: relative;
+  clear: both;
 }
 #module-header .h-logo {
   float: left;
@@ -22,7 +23,7 @@
   display: block;
   width: 280px;
   height: 55px;
-  background: url(img/logo.png?__inline) no-repeat;
+  background: url(img/logo.png?__inline) no-repeat left center;
   color: transparent;
 }
 #module-header .h-search {
@@ -42,6 +43,7 @@
   outline: 0 none;
   padding: 4px 10px;
   background: #fff;
+  height: 36px\0;
 }
 #module-header .h-search .btn-search {
   width: 70px;
@@ -49,6 +51,7 @@
   font-size: 16px;
   border-radius: 0;
   border: 0 none;
+  background: #1e89e0;
 }
 #module-header .h-words {
   width: 540px;
