--- a/source/widget/Public.MiniCart/minicart.css
+++ b/source/widget/Public.MiniCart/minicart.css
@@ -53,7 +53,9 @@
   padding-top: 10px;
   right: 0;
   top: 33px;
+  top: 32px\0;
   border-top: 0;
+  border-top: 1px solid #dfdfdf\0;
 }
 #module-minicart .dropdown-body .spacer {
   width: 139px;
