--- a/source/widget/UserHome.header/homeHeader.less
+++ b/source/widget/UserHome.header/homeHeader.less
@@ -77,7 +77,7 @@ body {
 /* 勋章页卡 */
 
 .pop_student_medal {
-    //border: 2px solid #ccc;
+    border: 1px solid #e5e5e5;
     border-radius: 4px;
     background-color: #fff;
     font-size: 12px;
@@ -86,7 +86,7 @@ body {
     margin: 10px auto;
     padding: 10px 10px;
 }
-div.dialog_arrow.arrow_tl {
+div.dialog_arrow_c.arrow_tl {
     width: 15px;
     background-image: url("img/dialog_arrow_theader.png");
     background-repeat: no-repeat;
