--- a/source/widget/UserHome.header/homeHeader.css
+++ b/source/widget/UserHome.header/homeHeader.css
@@ -6,6 +6,13 @@ body {
 #module-myheader {
   padding: 10px 0;
   background-color: #3bafda;
+  height: 80px;
+  min-width: 600px;
+}
+#module-myheader .userHome-header {
+  height: 64px;
+  width: 64px;
+  border-radius: 50%;
 }
 #module-myheader .user-avatar {
   margin-right: 10px;
@@ -17,10 +24,13 @@ body {
   color: #FFF;
 }
 #module-myheader .user-info .user-name {
-  font-size: 18px;
+  font-size: 17px;
   line-height: 18px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 9px;
+  margin-bottom: 5px;
+  max-width: 110px;
+  height: 20px;
+  overflow: hidden;
 }
 #module-myheader .user-info .mycenter-link {
   display: block;
@@ -53,9 +63,130 @@ body {
   border-radius: 8px;
   padding: 1px 10px 2px;
   display: inline-block;
-    font-style: italic;
+  font-style: italic;
 }
 #module-myheader .user-medal {
   vertical-align: middle;
   line-height: 60px;
+}
+/* 勋章页卡 */
+.pop_student_medal {
+  border: 1px solid #e5e5e5;
+  border-radius: 4px;
+  background-color: #fff;
+  font-size: 12px;
+  width: 324px;
+  overflow: hidden;
+  margin: 10px auto;
+  padding: 10px 10px;
+}
+div.dialog_arrow_c.arrow_tl {
+  width: 15px;
+  background-image: url("img/dialog_arrow_theader.png");
+  background-repeat: no-repeat;
+  position: absolute;
+  height: 10px;
+}
+.pop_student_medal .student_medal_con {
+  overflow: hidden;
+  height: 75px;
+}
+.pop_student_medal .student_medal_con .ui_medal_pic {
+  float: left;
+  display: inline;
+  width: 75px;
+  margin-right: 10px;
+}
+.pop_student_medal .student_medal_con .ui_medal_pic img {
+  width: 75px;
+  height: 75px;
+}
+.pop_student_medal .student_medal_con .medal_con {
+  float: left;
+  display: inline;
+  width: 215px;
+  color: #333;
+}
+.pop_student_medal .student_medal_con .medal_con strong {
+  color: #cc0000;
+  font-weight: normal;
+}
+.pop_student_medal .student_medal_con .medal_con p.name {
+  height: 25px;
+  font-size: 16px;
+  font-family: 'Microsoft YaHei';
+}
+.pop_student_medal .student_medal_con .medal_con p.info {
+  line-height: 160%;
+}
+.pop_student_medal .medal_info {
+  width: 100%;
+  overflow: hidden;
+  margin-top: 10px;
+}
+.pop_student_medal .medal_info span {
+  float: left;
+  width: 100%;
+  height: 20px;
+  line-height: 20px;
+  background: #fef3d5;
+  color: #cc0000;
+  padding-left: 5px;
+}
+.pop_student_medal .medal_info span.green {
+  background: #ecf9d2;
+  color: #609b13;
+}
+.pop_student_medal .meadl_live {
+  height: 30px;
+  line-height: 30px;
+  color: #999;
+}
+.pop_student_medal .medal_upgrade {
+  height: 30px;
+  overflow: hidden;
+  background: url('http://img04.xesimg.com/icon/bar_bg.png') 55px 20px no-repeat;
+  position: relative;
+  margin-bottom: 5px;
+}
+.pop_student_medal .medal_upgrade span {
+  float: left;
+  display: inline;
+}
+.pop_student_medal .medal_upgrade .upgrade {
+  width: 55px;
+  background: url('http://img04.xesimg.com/icon/up_icon.png') no-repeat;
+  padding-left: 15px;
+  margin-top: 15px;
+}
+.pop_student_medal .medal_upgrade .upgrade_number {
+  float: right;
+  margin-right: 10px;
+  color: #999;
+}
+.pop_student_medal .medal_upgrade .upgrade_number strong {
+  font-weight: normal;
+  color: red;
+}
+.pop_student_medal .medal_upgrade .upgrade_bar {
+  width: 236px;
+  height: 9px;
+  overflow: hidden;
+  position: absolute;
+  left: 55px;
+  top: 20px;
+  z-index: 20;
+}
+.pop_student_medal .medal_upgrade .upgrade_bar span {
+  width: 236px;
+  height: 9px;
+  background: url('http://img04.xesimg.com/icon/bar_cur.png') no-repeat;
+}
+.pop_student_medal .all_upgrade {
+  line-height: 25px;
+  color: #ec8000;
+}
+.pop_student_medal .all_upgrade_info {
+  height: 20px;
+  color: #cc0000;
 }
