--- a/source/widget/Public.Module/glory.less
+++ b/source/widget/Public.Module/glory.less
@@ -262,7 +262,8 @@
 
 }
 .window_detail {
-	height: 70px;
+	height: 45px;
+	box-sizing: content-box;
 	margin: 0 5px;
 	padding: 8px 5px 10px;
 	font-size: 12px;
