--- a/source/widget/UserHome.sidebar/sidebar.less
+++ b/source/widget/UserHome.sidebar/sidebar.less
@@ -55,6 +55,9 @@
     border-color: rgba(0, 0, 0, 0);
     color: #fff;
 }
+.btn-primary:focus, .btn-primary.focus{
+    background-color: #3bafda;
+}
 
 
 
