Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -145,13 +145,28 @@
 .centerHeader-intro-office {
     .intro;
     text-align: center;
+    a{
+        color: #fff;
+        cursor: pointer;
+        &:hover{
+            text-decoration: underline;
+        }
+    }
 }
 
 .centerHeader-intro-teacher {
     .intro;
     position: relative;
     left: 46%;
-    
+    .centerHeader-intro-teacher-name{
+        a{
+            color:#fff;
+            cursor: pointer;
+            &:hover{
+                text-decoration: underline;
+            }
+        }
+    }
     .centerHeader-intro-teacher-more {
         font-size: 12px;
         margin-left: 12px;
@@ -164,6 +179,13 @@
 .centerHeader-intro-stu {
     .intro;
     text-align: center;
+    a{
+        color: #fff;
+        cursor: pointer;
+        &:hover{
+            text-decoration: underline;
+        }
+    }
 }
 
 .centerHeader-selfintro {
