--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -17,6 +17,9 @@ html,
 body {
     font-family: "微软雅黑", Helvetica, 'Source Sans Pro', sans-serif;
 }
+body{
+    overflow-y: scroll;
+}
 @fa: "Arial";
 @fg: "Georgia";
 @ft: "Tahoma";
@@ -284,7 +287,7 @@ ul.grade-list {
         padding:12px 0;
         .fresh-detail .fresh-text .fresh-info {
             height: 60px;
-            line-height: 180%;
+            line-height: 175%;
             overflow: hidden;
         }
     }
