--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -286,9 +286,12 @@ ul.grade-list {
     .fresh-list {
         padding:12px 0;
         .fresh-detail .fresh-text .fresh-info {
-            height: 60px;
+            height: 65px;
             line-height: 175%;
             overflow: hidden;
+        }
+        .fresh-detail .fresh-barinfo{
+            padding-top:3px;
         }
     }
 }
