--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -304,6 +304,7 @@ ul,li{list-style: none;}
 			.test-price{
 				font-size: 26px;
 				color: #e74c3c;
+				font-family: "Microsoft YaHei";
 				span{
 					font-size: 18px;
 				}
