--- a/source/widget/Public.Header/header.less
+++ b/source/widget/Public.Header/header.less
@@ -17,13 +17,12 @@
     .h-logo {
         float: left;
         width: 350px;
-        line-height: 55px;
-        padding: 22px 0;
+        line-height: 99px;
         a {
             display: block;
-            width: 280px;
-            height: 55px;
-            background: url(img/logo.png?__inline) no-repeat left center;
+            width: 350px;
+            height: 99px;
+            background: url(img/Spring_logo.gif?__inline) no-repeat left center;
             color: transparent;
         }
     }
