--- a/source/widget/Public.FocusPic/ui-focusPic.less
+++ b/source/widget/Public.FocusPic/ui-focusPic.less
@@ -31,9 +31,9 @@
 				ol.focus-num {
 					width:100%;left:408px; 
 					li { 
-						float: left;width: 110px;height: 26px;line-height: 26px; border-radius: 1px; margin:0 1px;cursor: pointer; text-align: center;list-style: none;overflow: hidden;background-color:rgba(180,180,180,1);text-indent: 0;border:0;
+						float: left;width: 110px;height: 26px;line-height: 26px; border-radius: 1px; margin:0 1px;cursor: pointer; text-align: center;list-style: none;overflow: hidden;background-color:rgba(255,255,255,0.7);color:#333;text-indent: 0;border:0;
 					}
-					li.active {background: #fff;}
+					li.active {background: rgba(0,0,0,0.7);color: #fff;}
 				}
 		}
 }
