--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -483,13 +483,15 @@
     }
     .center-stud-prize {
         height: 52px;
+        padding: 0 20px;
+        a{
+            float: left;
+            width: 25%;
+            text-align: center;
+        }
         img {
-            &:first-child {
-                margin-left: 15px;
-            }
-            width: 28px;
-            height: 30px;
-            margin: 11px 15px 11px 0;
+            width: 25px;
+            margin: 13px 0px 0px 0;
         }
     }
 }
