--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -307,10 +307,14 @@ ul.grade-list {
     display: inline;
     margin:0 34px 20px 0;
 }
+.tab-xiao,.tab-chu,.tab-gao{
+    margin-left: 5px;
+}
 }
 .row-page-turn {
 //    padding:0 5px;
 margin-bottom: 20px;
+margin-left: 0;
 overflow: hidden;
 .live-content-action {
     width: 110%;
