--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -305,8 +305,12 @@ ul,li{list-style: none;}
 				font-size: 26px;
 				color: #e74c3c;
 				font-family: "Microsoft YaHei";
+				display: inline-block;
+				overflow: hidden;
+				margin-left: 10px;
 				span{
 					font-size: 18px;
+					float: left;
 				}
 			}
 		}
