--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -302,7 +302,6 @@ ul,li{list-style: none;}
 				margin-left: 5px;
 			}
 			.test-price{
-				font-size: 26px;
 				color: #e74c3c;
 				font-family: "Microsoft YaHei";
 				display: inline-block;
@@ -311,6 +310,9 @@ ul,li{list-style: none;}
 				span{
 					font-size: 18px;
 					float: left;
+				}
+				span.course-price-label{
+					font-size: 26px;
 				}
 			}
 		}
