Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/Public.Selector/selector.less
+++ b/source/widget/Public.Selector/selector.less
@@ -71,7 +71,8 @@
         }
         .choice-items{//右侧选项
             
-            height:30px;
+            max-height:98px;
+            overflow: auto;
             padding-top: 10px;
             padding-bottom: 10px;
             .choice-item-each{//单个选项
