学习中心样式

--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -83,6 +83,14 @@ body{
 	// height: 215px;
 	border-radius: 4px;
 }
+.wrap-body .alert-warning{
+	height: 42px;
+	overflow: hidden;
+	text-overflow:ellipsis;
+	white-space: nowrap;
+	padding: 0 15px 0 0;
+	line-height: 42px;
+}
 .courselayout-list{
 
 	.popover{
