--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -366,3 +366,30 @@ overflow: hidden;
 .paginationjs-pages .pagination >.disabled>a:focus{
     cursor: auto;
 }
+
+
+
+
+
+/* ====================== */
+@media (min-width: 320px){
+    .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+        float: left;
+    }
+}
+#module-topbar,
+#module-nav,
+#carousel-example-generic,
+.grade-course-title,
+.row-page-turn,
+#module-footer,
+.container{
+    width: 1190px !important;
+}
+.tab-content {
+    &.tab-xiao,
+    &.tab-chu,
+    &.tab-gao{
+        width: 1190px;
+    }
+}
