--- a/source/widget/Public.Footer/footer.less
+++ b/source/widget/Public.Footer/footer.less
@@ -44,7 +44,7 @@
     overflow: hidden;
     padding-bottom: 20px;
     border-bottom: 1px solid #F1F1F1;
-    a {
+    div {
         float: left;
         display: inline;
         width: 215px;
@@ -64,34 +64,35 @@
                 color: #3bafda;
             }
         }
+        span {
+            display: block;
+            line-height: 22px;
+            font-weight: bold;
+        }
     }
-    a.service-share {
+    .service-share {
         background: url(img/A1_01.png?__inline) no-repeat;
         &:hover {
             background-image: url(img/A1_01_hover.png?__inline);
         }
     }
-    a.service-live {
+    .service-live {
         background: url(img/A1_02.png?__inline) no-repeat;
         &:hover {
             background-image: url(img/A1_02_hover.png?__inline);
         }
     }
-    a.service-system {
+    .service-system {
         background: url(img/A1_03.png?__inline) no-repeat;
         &:hover {
             background-image: url(img/A1_03_hover.png?__inline);
         }
     }
-    a.service-interaction {
+    .service-interaction {
         background: url(img/A1_04.png?__inline) no-repeat;
         &:hover {
             background-image: url(img/A1_04_hover.png?__inline);
         }
     }
-    a span {
-        display: block;
-        line-height: 22px;
-        font-weight: bold;
-    }
+     
 }
