--- a/source/widget/Public.Topbar/topbar.less
+++ b/source/widget/Public.Topbar/topbar.less
@@ -122,6 +122,9 @@
             height: 30px;
             color: transparent;
             background: url(img/phone-400.jpg?__inline) no-repeat;
+            &.active:before{
+              color: #f1f1f1; 
+            }
         }
     }
     
