--- a/source/widget/Public.Footer/footer.css
+++ b/source/widget/Public.Footer/footer.css
@@ -38,7 +38,7 @@
   padding-bottom: 20px;
   border-bottom: 1px solid #F1F1F1;
 }
-#module-footer .foot-service a {
+#module-footer .foot-service div {
   float: left;
   display: inline;
   width: 215px;
@@ -48,40 +48,40 @@
   padding-left: 60px;
   text-decoration: none;
 }
-#module-footer .foot-service a p {
+#module-footer .foot-service div p {
   line-height: 150%;
   text-align: left;
 }
-#module-footer .foot-service a:hover p,
-#module-footer .foot-service a:hover span {
+#module-footer .foot-service div:hover p,
+#module-footer .foot-service div:hover span {
   color: #3bafda;
 }
-#module-footer .foot-service a.service-share {
-  background: url(img/A1_01.png?__inline) no-repeat;
-}
-#module-footer .foot-service a.service-share:hover {
-  background-image: url(img/A1_01_hover.png?__inline);
-}
-#module-footer .foot-service a.service-live {
-  background: url(img/A1_02.png?__inline) no-repeat;
-}
-#module-footer .foot-service a.service-live:hover {
-  background-image: url(img/A1_02_hover.png?__inline);
-}
-#module-footer .foot-service a.service-system {
-  background: url(img/A1_03.png?__inline) no-repeat;
-}
-#module-footer .foot-service a.service-system:hover {
-  background-image: url(img/A1_03_hover.png?__inline);
-}
-#module-footer .foot-service a.service-interaction {
-  background: url(img/A1_04.png?__inline) no-repeat;
-}
-#module-footer .foot-service a.service-interaction:hover {
-  background-image: url(img/A1_04_hover.png?__inline);
-}
-#module-footer .foot-service a span {
+#module-footer .foot-service div span {
   display: block;
   line-height: 22px;
   font-weight: bold;
+}
+#module-footer .foot-service .service-share {
+  background: url(img/A1_01.png?__inline) no-repeat;
+}
+#module-footer .foot-service .service-share:hover {
+  background-image: url(img/A1_01_hover.png?__inline);
+}
+#module-footer .foot-service .service-live {
+  background: url(img/A1_02.png?__inline) no-repeat;
+}
+#module-footer .foot-service .service-live:hover {
+  background-image: url(img/A1_02_hover.png?__inline);
+}
+#module-footer .foot-service .service-system {
+  background: url(img/A1_03.png?__inline) no-repeat;
+}
+#module-footer .foot-service .service-system:hover {
+  background-image: url(img/A1_03_hover.png?__inline);
+}
+#module-footer .foot-service .service-interaction {
+  background: url(img/A1_04.png?__inline) no-repeat;
+}
+#module-footer .foot-service .service-interaction:hover {
+  background-image: url(img/A1_04_hover.png?__inline);
 }
