--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -934,12 +934,13 @@ ul,li{list-style: none;}
 	margin-top: 0;
 }
 .search-rank-list{
-	height: 220px;
+	//height: 220px;
 	padding: 10px 5px 10px 5px;
 	background: #fcfcfc;
 	font-family: "SimSun";
 	font-size: 14px;
 	color: #333;
+    overflow: hidden;
 	li{
 		overflow: hidden;
 		line-height: 22px;
