--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -377,12 +377,11 @@ overflow: hidden;
         float: left;
     }
 }
-#module-topbar,
-#module-nav,
-#carousel-example-generic,
+
+//#carousel-example-generic,
 .grade-course-title,
 .row-page-turn,
-#module-footer,
+//#module-footer,
 .container{
     width: 1190px !important;
 }
