--- a/source/widget/Public.Nav/nav.less
+++ b/source/widget/Public.Nav/nav.less
@@ -159,6 +159,9 @@
                 zoom: 1;
                 overflow: hidden;
                 display: none;
+                .subitem {
+                    margin-bottom: 12px;
+                }
                 &.hover {
                     display: block;
                 }
