--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -374,7 +374,11 @@ overflow: hidden;
         float: left;
     }
 }
-
+//@media (max-width: 1190px){
+    html {
+        min-width: 1280px;
+    }
+//}
 
 //#carousel-example-generic,
 .grade-course-title,
