--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -139,13 +139,15 @@ a,button,.btn{
     border-color: transparent;
     background: #ffdd87;
     color: #333;
+    padding: 10px 15px;
     font-size: 14px;
     border-radius: 5px;
     i {
-        color: #FFF;
-        font-size: 20px;
-        padding-right: 10px;
-        float: left;
+        display: none;
+//        color: #FFF;
+//        font-size: 20px;
+//        padding-right: 10px;
+//        float: left;
     }
 }
 .nav-tabs {
