--- a/source/widget/UserHome.alert/alert.less
+++ b/source/widget/UserHome.alert/alert.less
@@ -2,18 +2,18 @@
 .alert-warning {
     border-color: transparent;
     background: #ffdd87;
-    line-height: 42px;
+//    line-height: 42px;
     color: #333;
-    padding: 0;
-    font-size: 14px;
+//    padding: 0;
+//    font-size: 14px;
     border-radius: 5px;
-    i {
-        float: left;
-       /*  background: url("img/exclamation-white.png?__inline"); */
-        width: 18px;
-        height: 18px;
-        display: inline-block;
-        margin: 12px 9px 0 20px;
-        background-position: center 0;
-    }
+//    i {
+//        float: left;
+//       /*  background: url("img/exclamation-white.png?__inline"); */
+//        width: 18px;
+//        height: 18px;
+//        display: inline-block;
+//        margin: 12px 9px 0 20px;
+//        background-position: center 0;
+//    }
 }
