--- a/source/widget/UserHome.sidebar/sidebar.less
+++ b/source/widget/UserHome.sidebar/sidebar.less
@@ -5,6 +5,9 @@
     width: 60px;
     margin-left: 3%;
     top: 135px;
+    &.module-sidebar-right{
+        right: 10px;
+    }
     .btn {
         height: 90px;
         font-size: 14px;
