新鲜事+学习中心

--- a/source/widget/Public.Dynamic/fresh.less
+++ b/source/widget/Public.Dynamic/fresh.less
@@ -318,7 +318,7 @@
             a{
                float: left;
                padding:4px 24px;
-               background: #ccd1d9;
+               background: #e0e0e0;
                color: #fff;
                .font-size(18px);
                .font-family('Microsoft YaHei');
