--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -84,12 +84,12 @@ body{
 	border-radius: 4px;
 }
 .wrap-body .alert-warning{
-//	height: 42px;
-//	overflow: hidden;
-//	text-overflow:ellipsis;
-//	white-space: nowrap;
-//	padding: 0 15px 0 0;
-//	line-height: 42px;
+	height: 42px;
+	overflow: hidden;
+	text-overflow:ellipsis;
+	white-space: nowrap;
+	padding: 0 15px;
+	line-height: 42px;
 }
 .courselayout-list{
 
