Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/Mall.help/ui-help.less
+++ b/source/widget/Mall.help/ui-help.less
@@ -142,7 +142,7 @@
 					.left_help {
 						float:left;width:430px;overflow:hidden;border-right: 1px solid #ededed;
 						.list_infor {
-							width:350px;
+							width:100%;
 							.title_spot {
 								line-height:30px;padding-left:12px;font-size:14px;
 								a {color:#333;}
