--- a/source/widget/Public.Dynamic/fresh.less
+++ b/source/widget/Public.Dynamic/fresh.less
@@ -225,6 +225,8 @@
             margin-right: 10px;
             text-align: center;
             position: relative;
+            max-height: 100px;
+            overflow: hidden;
             cursor: url("img/big.cur"), auto !important;
             .fresh-examIcon{
                 background: url("img/fresh-exam.gif") no-repeat;
