--- a/source/widget/Mall.live/live.less
+++ b/source/widget/Mall.live/live.less
@@ -6,7 +6,7 @@
 .live-scroll-btn-on{background-color: #1e89e0}
 .live-scroll-box,.live-list-container{overflow: hidden;width: 1274px;}
 .live-scroll-box-container{width: 100%;}
-.live-scroll-container{position: relative;width: 100%;}
+.live-scroll-container{position: relative;width: 100%;max-height: 588px;overflow: hidden;margin-bottom: 30px;}
 .live-list{overflow: hidden;width: 100%;margin-bottom: 90px;}
 .live-card{float: left;width: 271px;margin-right: 35px;}
 .live-course-hover{position: absolute;bottom: 0;height: 80px;}
