--- a/source/widget/Mall.live/live.css
+++ b/source/widget/Mall.live/live.css
@@ -42,6 +42,9 @@
 .live-scroll-container {
   position: relative;
   width: 100%;
+  max-height: 588px;
+  overflow: hidden;
+  margin-bottom: 30px;
 }
 .live-list {
   overflow: hidden;
