头部广告位添加

--- a/source/widget/Public.Header/header.less
+++ b/source/widget/Public.Header/header.less
@@ -66,4 +66,26 @@
         top: -35px !important;
     }
 }
-
+/* ======================首页头部广告位 */
+.modele-header-pic {
+    width: 1190px;
+    height: 80px;
+    margin:0 auto;
+    overflow: hidden;
+    position: relative;
+    outline: none;
+    .settime {
+        width: 240px;
+        height: 30px;
+        position: absolute;
+        right:305px;
+        top:20px;
+        z-index: 1;
+        color: #fff;
+        font-size: 26px;
+        font-family: '微软雅黑';
+    }
+    area {
+        outline: none;
+    }
+}
