y课程详情页

--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -212,6 +212,9 @@
            .disabled {
                background: #bfbfbf;
            }
+           .do_not_sign_up {
+              width: 160px;height: 40px;font-size: 18px;border-radius: 2px;background: #bfbfbf; 
+           }
 			.collect {
 				 display: inline-block;background: url(img/icon_star.png) 0 2px no-repeat;padding-left:16px;margin:10px 0 0 20px;
               a {
@@ -547,6 +550,12 @@
     .dialog_content {
         overflow: hidden;padding:5px 10px 10px 10px;
     }
+}
+#xuebox_DoNotSignUp {
+    position: absolute;
+   .dialog_content {
+        overflow: hidden;padding:10px;
+    } 
 }
 .rightResearch {
 	width: 67px;
