首页菜单修改

--- a/source/widget/Public.Nav/nav.less
+++ b/source/widget/Public.Nav/nav.less
@@ -13,7 +13,7 @@
     height: 45px;
     margin: 0 auto;
     font-size: 14px;
-    border-bottom: 1px solid #eee;
+    //border-bottom: 1px solid #eee;
     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
     position: relative;
     z-index: 4;
@@ -83,7 +83,7 @@
             color: #fff;
             display: block;
             font: 400 15px/44px "microsoft yahei";
-            height: 44px;
+            height: 45px;
             padding: 0 10px;
             margin: 0;
             background: #1e89e0;
@@ -106,7 +106,7 @@
     }
     .category-dd {
         display: none;
-        height: 381px;
+        height: 380px;
         background-color: #1E89E0;
         background-color: rgba(30, 137, 224, .9) !important;
         .category-item {
