--- a/source/widget/Public.Nav/nav.css
+++ b/source/widget/Public.Nav/nav.css
@@ -88,12 +88,14 @@
 .ui-categorys .category-dd {
   display: none;
   height: 380px;
-  background-color: rgba(30, 137, 224, 0.9);
+  background-color: #1E89E0;
+  background-color: rgba(30, 137, 224, 0.9) !important;
 }
 .ui-categorys .category-dd .category-item {
-  height: 75px;
+  height: 76px;
   padding: 18px 10px 18px 10px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  border-top: 1px solid #3A98E4;
+  border-top: 1px solid rgba(255, 255, 255, 0.2) !important;
 }
 .ui-categorys .category-dd .category-item h3 {
   margin: 0;
@@ -110,7 +112,8 @@
   padding: 0;
 }
 .ui-categorys .category-dd .category-item.hover {
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: #2F6FA2;
+  background-color: rgba(0, 0, 0, 0.2) !important;
 }
 .ui-categorys .category-dd .category-item:nth-last-child(1) {
   border-bottom: 0 none;
@@ -122,11 +125,12 @@
   left: 200px;
   top: 45px;
   height: 380px;
-  border: 1px rgba(30, 137, 224, 0.9) solid;
+  border: 1px solid #1E89E0;
+  border-color: rgba(30, 137, 224, 0.9) !important;
   border-left: 0;
   background-color: #f5f5f5;
   color: #333;
-  padding: 10px 20px;
+  padding: 10px 15px;
   font-size: 12px;
   line-height: 30px;
 }
@@ -137,6 +141,9 @@
   zoom: 1;
   overflow: hidden;
   display: none;
+}
+.ui-categorys .category-dd .category-layer .category-subject .subitem {
+  margin-bottom: 12px;
 }
 .ui-categorys .category-dd .category-layer .category-subject.hover {
   display: block;
