--- a/source/widget/UserHome.sidebar/sidebar.less
+++ b/source/widget/UserHome.sidebar/sidebar.less
@@ -9,7 +9,7 @@
         right: 10px;
     }
     .btn {
-        height: 90px;
+        height: 80px;
         font-size: 14px;
         padding:15px 0;
     }
@@ -44,6 +44,13 @@
         }
         &.fa-rmb{
             background: url('img/sidebar-gold.png?__inline');
+            &:before{
+                content: '';
+            }
+        }
+
+        &.fa-map-o{
+            background: url('img/sidebar-paper.png?__inline');
             &:before{
                 content: '';
             }
