学习中心头部更改

--- a/source/widget/Public.Header/header.less
+++ b/source/widget/Public.Header/header.less
@@ -22,7 +22,7 @@
             display: block;
             width: 350px;
             height: 99px;
-            background: url(img/Spring_logo.gif?__inline) no-repeat left center;
+            background: url(img/logo.png?__inline) no-repeat left center;
             color: transparent;
         }
     }
