--- a/source/widget/UserHome.header/homeHeader.less
+++ b/source/widget/UserHome.header/homeHeader.less
@@ -54,6 +54,9 @@ body {
                 color: #2599c4;
             }
         }
+        .popover-content{
+            color: #333;
+        }
     }
     .user-sex {
         padding: 4px 7px;
