--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -347,6 +347,9 @@ body{
 					height: 60px;
 					border-radius: 50%;
 				}
+				.QR-code-hover{
+					display: inline-block;
+				}
 			}
 			.coach-con{
 				float: left;
@@ -1040,4 +1043,24 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 		}
 	}
 
+}
+//辅导老师悬浮框
+.QR-code-inner{
+	text-align: center;
+	.QR-code{
+		margin-bottom: 8px;
+	}
+	p{
+		font-size: 12px;
+		text-align: center;
+		line-height: 18px;
+		margin-bottom: 0px;
+	}
+	p.Prompt-qq{
+		color: #e74c3c;
+		font-size: 14px;
+	}
+}
+.popover{
+	box-shadow: none;
 }
