修改课程详情页

--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -658,7 +658,35 @@
 		  padding-right: 30px;
 	}
 }
-
+//辅导老师
+.course-coach-teacher {
+    overflow:  hidden;margin-bottom: 20px;
+    span.f-left {
+                 width: 75px;font-size: 12px;line-height: 25px; padding-left: 10px;color: #666;
+				}
+    .coach-teacher-wrap {
+        width: 400px;height: 70px; border:2px solid #1e89e0;background: url(img/icon_infor.png) right bottom no-repeat;
+        .avatar {
+            float: left;width:60px;margin:4px 8px;
+            img {width:60px;height: 60px;border-radius: 50%;}
+        }
+         .coach-teacher-name {
+            float: left;width:90px;
+             p.name {
+                 font-size: 14px;padding-top: 10px;
+             }
+             p.info {
+                 color: #999;
+                 strong {
+                     color: #e74c3c;
+                 }
+             }
+        } 
+         .coach-teacher-info {
+            float: left;width:230px;line-height: 180%;border-left:1px solid #eaeaea;padding-left:7px;margin-top:10px;
+        } 
+    }
+}
 /*
  * CSS Styles that are needed by jScrollPane for it to operate correctly.
  *模拟听课页---讲节列表过多时的滚动条
