续报功能更改

--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -1230,6 +1230,12 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 			outline: medium none;
 			padding: 0;
 		}
+		.disableSign{
+			background: #ccd1d9;
+			border: 1px solid #ccd1d9;
+			color: #fff;
+			cursor: default;
+		}
 	}
 }
 .continuecourse{
