--- a/source/widget/Mall.live/live.less
+++ b/source/widget/Mall.live/live.less
@@ -34,5 +34,6 @@
 .live-grey{background-color: #bfbfbf;}
 .liveBreadCrumb{margin-top: 17px;}
 .choice .row{margin: 0;}
+.live-order{background-color: #ffbc3c;}
 
 
