--- a/source/widget/Mall.live/live.less
+++ b/source/widget/Mall.live/live.less
@@ -31,9 +31,10 @@
 .live-enter{width: 150px;height: 36px;display: inline-block;background-color: #e74c3c;color: #fff;font-size: 14px;text-align: center;line-height: 36px;border-radius: 1px;cursor: pointer;}
 .live-enter-box{display: inline-block;width: 245px;height: 50px;text-align: center;line-height: 50px;}
 .live-blue{background-color: #3bafda;}
-.live-grey{background-color: #bfbfbf;}
+.live-have-order,.live-grey{background-color: #bfbfbf;}
 .liveBreadCrumb{margin-top: 17px;}
 .choice .row{margin: 0;}
 .live-order{background-color: #ffbc3c;}
-
+.liveOrderFailModal .modal-body,.liveOrderSuccessModal .modal-body{text-align: center;height: 420px}
+.orderFailTip,.orderSuccessTip{position: absolute;bottom: 0;right: 10px;margin-bottom: 10px;color: #999;}
 
