直播辅导页增加冻结状态

--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -808,6 +808,22 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 					cursor: pointer;
 				}
 			}
+			.red-mark{
+				a{
+					color: #e74c3c;
+				}
+			}
+			span.red-mark{
+				color: #e74c3c;
+				em.mark{
+					background: url("img/freeze-mark.png") no-repeat right center;
+					display: inline-block;
+					height: 18px;
+					padding-right: 24px;
+					vertical-align: middle;
+					width: 18px;
+				}
+			}
 			.studied{
 				color: #37bc9b;
 				a{
