--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -815,13 +815,13 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 			}
 			span.red-mark{
 				color: #e74c3c;
-				em.mark{
+				.mark{
 					background: url("img/freeze-mark.png") no-repeat right center;
+					vertical-align: middle;
+					padding-right: 24px;
 					display: inline-block;
 					height: 18px;
-					padding-right: 24px;
-					vertical-align: middle;
-					width: 18px;
+					line-height: 18px;
 				}
 			}
 			.studied{
