--- a/source/widget/Mall.live/live.less
+++ b/source/widget/Mall.live/live.less
@@ -31,7 +31,7 @@
 .live-enter{width: 150px;height: 36px;display: inline-block;background-color: #e74c3c;color: #fff;font-size: 14px;text-align: center;line-height: 36px;border-radius: 1px;cursor: pointer;}
 .live-enter-box{display: inline-block;width: 245px;height: 50px;text-align: center;line-height: 50px;}
 .live-blue{background-color: #3bafda;}
-.live-have-order,.live-grey{background-color: #bfbfbf;}
+.live-have-order,.live-grey{background-color: #bfbfbf;width: 150px;height: 36px;display: inline-block;color: #fff;font-size: 14px;text-align: center;line-height: 36px;border-radius: 1px;}
 .liveBreadCrumb{margin-top: 17px;}
 .choice .row{margin: 0;}
 .live-order{background-color: #ffbc3c;}
