--- a/source/widget/Mall.live/live.css
+++ b/source/widget/Mall.live/live.css
@@ -153,6 +153,14 @@
 .live-have-order,
 .live-grey {
   background-color: #bfbfbf;
+  width: 150px;
+  height: 36px;
+  display: inline-block;
+  color: #fff;
+  font-size: 14px;
+  text-align: center;
+  line-height: 36px;
+  border-radius: 1px;
 }
 .liveBreadCrumb {
   margin-top: 17px;
