--- a/source/widget/UM.bill/bill.less
+++ b/source/widget/UM.bill/bill.less
@@ -1053,3 +1053,33 @@
         float: right;
     }
 }
+.new_consignee_items {
+    overflow: hidden;margin-top: 10px; position: relative;
+    .info_from {
+        overflow: hidden;padding:20px 20px 0;
+        p {
+            overflow: hidden;height:50px;
+            label {float:left;display: inline;width: 70px;line-height:30px;margin-bottom: 10px;}
+            input {float:left;display: inline;width: 250px;height: 26px;color: #999;outline: none;border:1px solid #d2d2d2;padding:5px;}
+            .input_360 {width: 360px;}
+            span {
+                float: left;display: inline; margin-right: 5px;
+                &.text {line-height: 35px;}
+            }
+            .select {
+                display: inline;margin-right: 10px;height: 36px;border:1px solid #d2d2d2;
+            }
+            .btn {width:172px;color:#FFF;line-height:35px;text-decoration: none;font-size: 16px;background: #3bafda;}
+            .error_tips_address {
+                float:none; padding-left:10px;
+                display:inline-block;
+            }
+            .error {
+                border:1px solid #c00;
+            }
+            &.error_tips_address {
+                color: #cc0000;
+            }
+        }
+    }
+}
