--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -216,7 +216,10 @@
                background: #bfbfbf;
            }
            .do_not_sign_up {
-              width: 160px;height: 40px;font-size: 18px;border-radius: 2px;background: #bfbfbf; 
+              width: 160px;height: 40px;font-size: 18px;border-radius: 2px;background: #bfbfbf;
+           }
+           .btn-join-exam {
+               width: 160px;height: 40px;font-size: 18px;border-radius: 2px;background: #ffe4d0; border:1px solid #f0cab6;color: #eb711d;
            }
 			.collect {
 				 display: inline-block;background: url(img/icon_star.png) 0 2px no-repeat;padding-left:16px;margin:10px 0 0 20px;
@@ -560,6 +563,12 @@
         overflow: hidden;padding:10px;
     } 
 }
+#xuebox_btnJoinExam {
+    position: absolute;
+   .dialog_content {
+        overflow: hidden;padding:10px;
+    } 
+}
 .rightResearch {
 	width: 67px;
 	height: 256px;
@@ -683,7 +692,7 @@
              }
         } 
          .coach-teacher-info {
-            float: left;width:255px;line-height: 180%;border-left:1px solid #eaeaea;padding-left:7px;margin-top:10px;
+            float: left;width:260px;line-height: 180%;border-left:1px solid #eaeaea;padding-left:7px;margin-top:10px;
         } 
     }
 }
